; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/mitosis/keymaps/datagrok/extr_keymap.c_process_record_cdeq.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/mitosis/keymaps/datagrok/extr_keymap.c_process_record_cdeq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@KC_SLSH = common dso_local global i32 0, align 4
@comm_shifted = common dso_local global i32 0, align 4
@KC_1 = common dso_local global i32 0, align 4
@ques_shifted = common dso_local global i32 0, align 4
@KC_LSHIFT = common dso_local global i32 0, align 4
@KC_RSHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @process_record_cdeq(i32 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %14 [
    i32 129, label %10
    i32 128, label %12
  ]

10:                                               ; preds = %2
  %11 = load i32, i32* @KC_SLSH, align 4
  store i32 %11, i32* %7, align 4
  store i32* @comm_shifted, i32** %8, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load i32, i32* @KC_1, align 4
  store i32 %13, i32* %7, align 4
  store i32* @ques_shifted, i32** %8, align 8
  br label %15

14:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %50

15:                                               ; preds = %12, %10
  %16 = call i32 (...) @get_mods()
  %17 = load i32, i32* @KC_LSHIFT, align 4
  %18 = call i32 @MOD_BIT(i32 %17)
  %19 = load i32, i32* @KC_RSHIFT, align 4
  %20 = call i32 @MOD_BIT(i32 %19)
  %21 = or i32 %18, %20
  %22 = and i32 %16, %21
  store i32 %22, i32* %6, align 4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %15
  %29 = load i32, i32* %6, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %28
  %32 = load i32*, i32** %8, align 8
  store i32 1, i32* %32, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @register_code(i32 %33)
  store i32 0, i32* %3, align 4
  br label %50

35:                                               ; preds = %28, %15
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %49, label %41

41:                                               ; preds = %35
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* %42, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %41
  %46 = load i32*, i32** %8, align 8
  store i32 0, i32* %46, align 4
  %47 = load i32, i32* %7, align 4
  %48 = call i32 @unregister_code(i32 %47)
  store i32 0, i32* %3, align 4
  br label %50

49:                                               ; preds = %41, %35
  store i32 1, i32* %3, align 4
  br label %50

50:                                               ; preds = %49, %45, %31, %14
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i32 @get_mods(...) #1

declare dso_local i32 @MOD_BIT(i32) #1

declare dso_local i32 @register_code(i32) #1

declare dso_local i32 @unregister_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
